// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelController components 1 default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChannelControl
    channelControl={
      Object {
        "activeChannel": "__ALL__/__ALL__//__ALL__/__ALL__",
        "allChannels": Array [
          "__ALL__/__ALL__//__ALL__/__ALL__",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
        ],
        "changeTheChannel": [Function],
        "isChangingChannel": undefined,
      }
    }
    locale="en-US"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="channels"
        >
          <div
            className="subscription label"
          >
            Subscription
             
            (1 of {0})
            <Tooltip
              direction="bottom"
              iconDescription="tooltip"
              iconName="info"
              iconTitle=""
              menuOffset={[Function]}
              open={false}
              showIcon={true}
              triggerText=""
            >
              <span
                className="showPagesTooltip"
              >
                Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
              </span>
            </Tooltip>
          </div>
          <div
            className="channelsCombo"
          >
            <DropdownV2
              ariaLabel="All subscriptions"
              disabled={false}
              id="comboChannel"
              inline={true}
              itemToElement={null}
              itemToString={[Function]}
              items={
                Array [
                  Object {
                    "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                    "hasSubchannels": false,
                    "label": "All Subscriptions",
                    "splitChn": Array [
                      "__ALL__/__ALL__//__ALL__/__ALL__",
                      "__ALL__",
                      "__ALL__",
                      "__ALL__",
                      "__ALL__",
                    ],
                    "subchannels": Array [],
                  },
                  Object {
                    "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                    "hasSubchannels": true,
                    "label": "guestbook-app",
                    "splitChn": Array [
                      "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                      "default",
                      "guestbook-app",
                      "gbapp-ch",
                      "guestbook-app-latest",
                    ],
                    "subchannels": Array [
                      Object {
                        "beg": "cassandra-cassandra-service",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                        "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                      },
                      Object {
                        "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                        "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                      },
                    ],
                  },
                ]
              }
              label="All subscriptions"
              light={false}
              onChange={[Function]}
              selectedItem={Object {}}
              type="default"
            />
          </div>
        </div>,
        false,
      ],
      "className": "channel-controls-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="subscription label"
            >
              Subscription
               
              (1 of {0})
              <Tooltip
                direction="bottom"
                iconDescription="tooltip"
                iconName="info"
                iconTitle=""
                menuOffset={[Function]}
                open={false}
                showIcon={true}
                triggerText=""
              >
                <span
                  className="showPagesTooltip"
                >
                  Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                </span>
              </Tooltip>
            </div>,
            <div
              className="channelsCombo"
            >
              <DropdownV2
                ariaLabel="All subscriptions"
                disabled={false}
                id="comboChannel"
                inline={true}
                itemToElement={null}
                itemToString={[Function]}
                items={
                  Array [
                    Object {
                      "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                      "hasSubchannels": false,
                      "label": "All Subscriptions",
                      "splitChn": Array [
                        "__ALL__/__ALL__//__ALL__/__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                      ],
                      "subchannels": Array [],
                    },
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "cassandra-cassandra-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                          "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                        },
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                      ],
                    },
                  ]
                }
                label="All subscriptions"
                light={false}
                onChange={[Function]}
                selectedItem={Object {}}
                type="default"
              />
            </div>,
          ],
          "className": "channels",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Subscription",
                " ",
                "(1 of {0})",
                <Tooltip
                  direction="bottom"
                  iconDescription="tooltip"
                  iconName="info"
                  iconTitle=""
                  menuOffset={[Function]}
                  open={false}
                  showIcon={true}
                  triggerText=""
                >
                  <span
                    className="showPagesTooltip"
                  >
                    Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                  </span>
                </Tooltip>,
              ],
              "className": "subscription label",
            },
            "ref": null,
            "rendered": Array [
              "Subscription",
              " ",
              "(1 of {0})",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <span
                    className="showPagesTooltip"
                  >
                    Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                  </span>,
                  "direction": "bottom",
                  "iconDescription": "tooltip",
                  "iconName": "info",
                  "iconTitle": "",
                  "menuOffset": [Function],
                  "open": false,
                  "showIcon": true,
                  "triggerText": "",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                    "className": "showPagesTooltip",
                  },
                  "ref": null,
                  "rendered": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                  "type": "span",
                },
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropdownV2
                ariaLabel="All subscriptions"
                disabled={false}
                id="comboChannel"
                inline={true}
                itemToElement={null}
                itemToString={[Function]}
                items={
                  Array [
                    Object {
                      "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                      "hasSubchannels": false,
                      "label": "All Subscriptions",
                      "splitChn": Array [
                        "__ALL__/__ALL__//__ALL__/__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                      ],
                      "subchannels": Array [],
                    },
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "cassandra-cassandra-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                          "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                        },
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                      ],
                    },
                  ]
                }
                label="All subscriptions"
                light={false}
                onChange={[Function]}
                selectedItem={Object {}}
                type="default"
              />,
              "className": "channelsCombo",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "ariaLabel": "All subscriptions",
                "disabled": false,
                "id": "comboChannel",
                "inline": true,
                "itemToElement": null,
                "itemToString": [Function],
                "items": Array [
                  Object {
                    "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                    "hasSubchannels": false,
                    "label": "All Subscriptions",
                    "splitChn": Array [
                      "__ALL__/__ALL__//__ALL__/__ALL__",
                      "__ALL__",
                      "__ALL__",
                      "__ALL__",
                      "__ALL__",
                    ],
                    "subchannels": Array [],
                  },
                  Object {
                    "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                    "hasSubchannels": true,
                    "label": "guestbook-app",
                    "splitChn": Array [
                      "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                      "default",
                      "guestbook-app",
                      "gbapp-ch",
                      "guestbook-app-latest",
                    ],
                    "subchannels": Array [
                      Object {
                        "beg": "cassandra-cassandra-service",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                        "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                      },
                      Object {
                        "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                        "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                      },
                    ],
                  },
                ],
                "label": "All subscriptions",
                "light": false,
                "onChange": [Function],
                "selectedItem": Object {},
                "type": "default",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="channels"
          >
            <div
              className="subscription label"
            >
              Subscription
               
              (1 of {0})
              <Tooltip
                direction="bottom"
                iconDescription="tooltip"
                iconName="info"
                iconTitle=""
                menuOffset={[Function]}
                open={false}
                showIcon={true}
                triggerText=""
              >
                <span
                  className="showPagesTooltip"
                >
                  Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                </span>
              </Tooltip>
            </div>
            <div
              className="channelsCombo"
            >
              <DropdownV2
                ariaLabel="All subscriptions"
                disabled={false}
                id="comboChannel"
                inline={true}
                itemToElement={null}
                itemToString={[Function]}
                items={
                  Array [
                    Object {
                      "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                      "hasSubchannels": false,
                      "label": "All Subscriptions",
                      "splitChn": Array [
                        "__ALL__/__ALL__//__ALL__/__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                      ],
                      "subchannels": Array [],
                    },
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "cassandra-cassandra-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                          "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                        },
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                      ],
                    },
                  ]
                }
                label="All subscriptions"
                light={false}
                onChange={[Function]}
                selectedItem={Object {}}
                type="default"
              />
            </div>
          </div>,
          false,
        ],
        "className": "channel-controls-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="subscription label"
              >
                Subscription
                 
                (1 of {0})
                <Tooltip
                  direction="bottom"
                  iconDescription="tooltip"
                  iconName="info"
                  iconTitle=""
                  menuOffset={[Function]}
                  open={false}
                  showIcon={true}
                  triggerText=""
                >
                  <span
                    className="showPagesTooltip"
                  >
                    Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                  </span>
                </Tooltip>
              </div>,
              <div
                className="channelsCombo"
              >
                <DropdownV2
                  ariaLabel="All subscriptions"
                  disabled={false}
                  id="comboChannel"
                  inline={true}
                  itemToElement={null}
                  itemToString={[Function]}
                  items={
                    Array [
                      Object {
                        "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                        "hasSubchannels": false,
                        "label": "All Subscriptions",
                        "splitChn": Array [
                          "__ALL__/__ALL__//__ALL__/__ALL__",
                          "__ALL__",
                          "__ALL__",
                          "__ALL__",
                          "__ALL__",
                        ],
                        "subchannels": Array [],
                      },
                      Object {
                        "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                        "hasSubchannels": true,
                        "label": "guestbook-app",
                        "splitChn": Array [
                          "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                          "default",
                          "guestbook-app",
                          "gbapp-ch",
                          "guestbook-app-latest",
                        ],
                        "subchannels": Array [
                          Object {
                            "beg": "cassandra-cassandra-service",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                            "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                          },
                          Object {
                            "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                            "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                          },
                        ],
                      },
                    ]
                  }
                  label="All subscriptions"
                  light={false}
                  onChange={[Function]}
                  selectedItem={Object {}}
                  type="default"
                />
              </div>,
            ],
            "className": "channels",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Subscription",
                  " ",
                  "(1 of {0})",
                  <Tooltip
                    direction="bottom"
                    iconDescription="tooltip"
                    iconName="info"
                    iconTitle=""
                    menuOffset={[Function]}
                    open={false}
                    showIcon={true}
                    triggerText=""
                  >
                    <span
                      className="showPagesTooltip"
                    >
                      Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                    </span>
                  </Tooltip>,
                ],
                "className": "subscription label",
              },
              "ref": null,
              "rendered": Array [
                "Subscription",
                " ",
                "(1 of {0})",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <span
                      className="showPagesTooltip"
                    >
                      Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                    </span>,
                    "direction": "bottom",
                    "iconDescription": "tooltip",
                    "iconName": "info",
                    "iconTitle": "",
                    "menuOffset": [Function],
                    "open": false,
                    "showIcon": true,
                    "triggerText": "",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                      "className": "showPagesTooltip",
                    },
                    "ref": null,
                    "rendered": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                    "type": "span",
                  },
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropdownV2
                  ariaLabel="All subscriptions"
                  disabled={false}
                  id="comboChannel"
                  inline={true}
                  itemToElement={null}
                  itemToString={[Function]}
                  items={
                    Array [
                      Object {
                        "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                        "hasSubchannels": false,
                        "label": "All Subscriptions",
                        "splitChn": Array [
                          "__ALL__/__ALL__//__ALL__/__ALL__",
                          "__ALL__",
                          "__ALL__",
                          "__ALL__",
                          "__ALL__",
                        ],
                        "subchannels": Array [],
                      },
                      Object {
                        "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                        "hasSubchannels": true,
                        "label": "guestbook-app",
                        "splitChn": Array [
                          "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                          "default",
                          "guestbook-app",
                          "gbapp-ch",
                          "guestbook-app-latest",
                        ],
                        "subchannels": Array [
                          Object {
                            "beg": "cassandra-cassandra-service",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                            "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                          },
                          Object {
                            "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                            "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                          },
                        ],
                      },
                    ]
                  }
                  label="All subscriptions"
                  light={false}
                  onChange={[Function]}
                  selectedItem={Object {}}
                  type="default"
                />,
                "className": "channelsCombo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "ariaLabel": "All subscriptions",
                  "disabled": false,
                  "id": "comboChannel",
                  "inline": true,
                  "itemToElement": null,
                  "itemToString": [Function],
                  "items": Array [
                    Object {
                      "chn": "__ALL__/__ALL__//__ALL__/__ALL__",
                      "hasSubchannels": false,
                      "label": "All Subscriptions",
                      "splitChn": Array [
                        "__ALL__/__ALL__//__ALL__/__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                        "__ALL__",
                      ],
                      "subchannels": Array [],
                    },
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "cassandra-cassandra-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
                          "end": "mysql-wordpress-pd-wordpress-mysql-deployment",
                        },
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                      ],
                    },
                  ],
                  "label": "All subscriptions",
                  "light": false,
                  "onChange": [Function],
                  "selectedItem": Object {},
                  "type": "default",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`ChannelController components 2 ChannelController components 2 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChannelControl
    channelControl={
      Object {
        "activeChannel": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
        "allChannels": Array [
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
        ],
        "changeTheChannel": [Function],
        "isChangingChannel": undefined,
      }
    }
    locale="en-US"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="channels"
        >
          <div
            className="subscription label"
          >
            Subscription
             
            (1 of {0})
            <Tooltip
              direction="bottom"
              iconDescription="tooltip"
              iconName="info"
              iconTitle=""
              menuOffset={[Function]}
              open={false}
              showIcon={true}
              triggerText=""
            >
              <span
                className="showPagesTooltip"
              >
                Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
              </span>
            </Tooltip>
          </div>
          <div
            className="channelsCombo"
          >
            <DropdownV2
              ariaLabel="All subscriptions"
              disabled={false}
              id="comboChannel"
              inline={true}
              itemToElement={null}
              itemToString={[Function]}
              items={
                Array [
                  Object {
                    "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                    "hasSubchannels": true,
                    "label": "guestbook-app",
                    "splitChn": Array [
                      "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                      "default",
                      "guestbook-app",
                      "gbapp-ch",
                      "guestbook-app-latest",
                    ],
                    "subchannels": Array [
                      Object {
                        "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                        "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                      },
                      Object {
                        "beg": "elasticsearch-es-replicationcontroller",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                        "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                      },
                      Object {
                        "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                        "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                      },
                    ],
                  },
                ]
              }
              label="All subscriptions"
              light={false}
              onChange={[Function]}
              selectedItem={Object {}}
              type="default"
            />
          </div>
        </div>,
        <div
          className="pagination"
        >
          <div
            className="resourcePaging label"
          >
            Resource nodes
            <div
              className="show-subscription-pages-icon"
            >
              <Tooltip
                direction="bottom"
                iconDescription="tooltip"
                iconName="info"
                iconTitle=""
                menuOffset={[Function]}
                open={false}
                showIcon={true}
                triggerText=""
              >
                <span
                  className="showPagesTooltip"
                >
                  Use the navigation to view the resources that are deployed by the selected subscription.
                </span>
              </Tooltip>
            </div>
          </div>
          <div
            className="mainPagination"
          >
            <span
              className="label pageLabel labelLink"
              id="p1"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              &lt;&lt;
            </span>
            <span
              className="label pageLabel labelLink"
              id="p2"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              &lt;
            </span>
            <input
              aria-label="Current page"
              className="label pageInput"
              id="valuePage"
              max="{channelsLength}"
              min="1"
              onChange={[Function]}
              onKeyPress={[Function]}
              tabIndex="0"
              type="number"
              value={2}
            />
            <span
              className="label pageLabel"
            >
              of {0}
            </span>
            <span
              className="label pageLabel labelLink"
              id="p3"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              &gt;
            </span>
            <span
              className="label pageLabel labelLink"
              id="p4"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              &gt;&gt;
            </span>
          </div>
        </div>,
      ],
      "className": "channel-controls-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="subscription label"
            >
              Subscription
               
              (1 of {0})
              <Tooltip
                direction="bottom"
                iconDescription="tooltip"
                iconName="info"
                iconTitle=""
                menuOffset={[Function]}
                open={false}
                showIcon={true}
                triggerText=""
              >
                <span
                  className="showPagesTooltip"
                >
                  Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                </span>
              </Tooltip>
            </div>,
            <div
              className="channelsCombo"
            >
              <DropdownV2
                ariaLabel="All subscriptions"
                disabled={false}
                id="comboChannel"
                inline={true}
                itemToElement={null}
                itemToString={[Function]}
                items={
                  Array [
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                        Object {
                          "beg": "elasticsearch-es-replicationcontroller",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                          "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                        },
                        Object {
                          "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                          "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                        },
                      ],
                    },
                  ]
                }
                label="All subscriptions"
                light={false}
                onChange={[Function]}
                selectedItem={Object {}}
                type="default"
              />
            </div>,
          ],
          "className": "channels",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Subscription",
                " ",
                "(1 of {0})",
                <Tooltip
                  direction="bottom"
                  iconDescription="tooltip"
                  iconName="info"
                  iconTitle=""
                  menuOffset={[Function]}
                  open={false}
                  showIcon={true}
                  triggerText=""
                >
                  <span
                    className="showPagesTooltip"
                  >
                    Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                  </span>
                </Tooltip>,
              ],
              "className": "subscription label",
            },
            "ref": null,
            "rendered": Array [
              "Subscription",
              " ",
              "(1 of {0})",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <span
                    className="showPagesTooltip"
                  >
                    Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                  </span>,
                  "direction": "bottom",
                  "iconDescription": "tooltip",
                  "iconName": "info",
                  "iconTitle": "",
                  "menuOffset": [Function],
                  "open": false,
                  "showIcon": true,
                  "triggerText": "",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                    "className": "showPagesTooltip",
                  },
                  "ref": null,
                  "rendered": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                  "type": "span",
                },
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <DropdownV2
                ariaLabel="All subscriptions"
                disabled={false}
                id="comboChannel"
                inline={true}
                itemToElement={null}
                itemToString={[Function]}
                items={
                  Array [
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                        Object {
                          "beg": "elasticsearch-es-replicationcontroller",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                          "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                        },
                        Object {
                          "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                          "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                        },
                      ],
                    },
                  ]
                }
                label="All subscriptions"
                light={false}
                onChange={[Function]}
                selectedItem={Object {}}
                type="default"
              />,
              "className": "channelsCombo",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "ariaLabel": "All subscriptions",
                "disabled": false,
                "id": "comboChannel",
                "inline": true,
                "itemToElement": null,
                "itemToString": [Function],
                "items": Array [
                  Object {
                    "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                    "hasSubchannels": true,
                    "label": "guestbook-app",
                    "splitChn": Array [
                      "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                      "default",
                      "guestbook-app",
                      "gbapp-ch",
                      "guestbook-app-latest",
                    ],
                    "subchannels": Array [
                      Object {
                        "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                        "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                      },
                      Object {
                        "beg": "elasticsearch-es-replicationcontroller",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                        "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                      },
                      Object {
                        "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                        "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                        "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                      },
                    ],
                  },
                ],
                "label": "All subscriptions",
                "light": false,
                "onChange": [Function],
                "selectedItem": Object {},
                "type": "default",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="resourcePaging label"
            >
              Resource nodes
              <div
                className="show-subscription-pages-icon"
              >
                <Tooltip
                  direction="bottom"
                  iconDescription="tooltip"
                  iconName="info"
                  iconTitle=""
                  menuOffset={[Function]}
                  open={false}
                  showIcon={true}
                  triggerText=""
                >
                  <span
                    className="showPagesTooltip"
                  >
                    Use the navigation to view the resources that are deployed by the selected subscription.
                  </span>
                </Tooltip>
              </div>
            </div>,
            <div
              className="mainPagination"
            >
              <span
                className="label pageLabel labelLink"
                id="p1"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &lt;&lt;
              </span>
              <span
                className="label pageLabel labelLink"
                id="p2"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &lt;
              </span>
              <input
                aria-label="Current page"
                className="label pageInput"
                id="valuePage"
                max="{channelsLength}"
                min="1"
                onChange={[Function]}
                onKeyPress={[Function]}
                tabIndex="0"
                type="number"
                value={2}
              />
              <span
                className="label pageLabel"
              >
                of {0}
              </span>
              <span
                className="label pageLabel labelLink"
                id="p3"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &gt;
              </span>
              <span
                className="label pageLabel labelLink"
                id="p4"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &gt;&gt;
              </span>
            </div>,
          ],
          "className": "pagination",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Resource nodes",
                <div
                  className="show-subscription-pages-icon"
                >
                  <Tooltip
                    direction="bottom"
                    iconDescription="tooltip"
                    iconName="info"
                    iconTitle=""
                    menuOffset={[Function]}
                    open={false}
                    showIcon={true}
                    triggerText=""
                  >
                    <span
                      className="showPagesTooltip"
                    >
                      Use the navigation to view the resources that are deployed by the selected subscription.
                    </span>
                  </Tooltip>
                </div>,
              ],
              "className": "resourcePaging label",
            },
            "ref": null,
            "rendered": Array [
              "Resource nodes",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Tooltip
                    direction="bottom"
                    iconDescription="tooltip"
                    iconName="info"
                    iconTitle=""
                    menuOffset={[Function]}
                    open={false}
                    showIcon={true}
                    triggerText=""
                  >
                    <span
                      className="showPagesTooltip"
                    >
                      Use the navigation to view the resources that are deployed by the selected subscription.
                    </span>
                  </Tooltip>,
                  "className": "show-subscription-pages-icon",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <span
                      className="showPagesTooltip"
                    >
                      Use the navigation to view the resources that are deployed by the selected subscription.
                    </span>,
                    "direction": "bottom",
                    "iconDescription": "tooltip",
                    "iconName": "info",
                    "iconTitle": "",
                    "menuOffset": [Function],
                    "open": false,
                    "showIcon": true,
                    "triggerText": "",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Use the navigation to view the resources that are deployed by the selected subscription.",
                      "className": "showPagesTooltip",
                    },
                    "ref": null,
                    "rendered": "Use the navigation to view the resources that are deployed by the selected subscription.",
                    "type": "span",
                  },
                  "type": [Function],
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="label pageLabel labelLink"
                  id="p1"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &lt;&lt;
                </span>,
                <span
                  className="label pageLabel labelLink"
                  id="p2"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &lt;
                </span>,
                <input
                  aria-label="Current page"
                  className="label pageInput"
                  id="valuePage"
                  max="{channelsLength}"
                  min="1"
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  tabIndex="0"
                  type="number"
                  value={2}
                />,
                <span
                  className="label pageLabel"
                >
                  of {0}
                </span>,
                <span
                  className="label pageLabel labelLink"
                  id="p3"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &gt;
                </span>,
                <span
                  className="label pageLabel labelLink"
                  id="p4"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &gt;&gt;
                </span>,
              ],
              "className": "mainPagination",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "<<",
                  "className": "label pageLabel labelLink",
                  "id": "p1",
                  "onClick": [Function],
                  "onKeyPress": [Function],
                  "role": "button",
                  "tabIndex": "0",
                },
                "ref": null,
                "rendered": "<<",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "<",
                  "className": "label pageLabel labelLink",
                  "id": "p2",
                  "onClick": [Function],
                  "onKeyPress": [Function],
                  "role": "button",
                  "tabIndex": "0",
                },
                "ref": null,
                "rendered": "<",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-label": "Current page",
                  "className": "label pageInput",
                  "id": "valuePage",
                  "max": "{channelsLength}",
                  "min": "1",
                  "onChange": [Function],
                  "onKeyPress": [Function],
                  "tabIndex": "0",
                  "type": "number",
                  "value": 2,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "of {0}",
                  "className": "label pageLabel",
                },
                "ref": null,
                "rendered": "of {0}",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": ">",
                  "className": "label pageLabel labelLink",
                  "id": "p3",
                  "onClick": [Function],
                  "onKeyPress": [Function],
                  "role": "button",
                  "tabIndex": "0",
                },
                "ref": null,
                "rendered": ">",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": ">>",
                  "className": "label pageLabel labelLink",
                  "id": "p4",
                  "onClick": [Function],
                  "onKeyPress": [Function],
                  "role": "button",
                  "tabIndex": "0",
                },
                "ref": null,
                "rendered": ">>",
                "type": "span",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="channels"
          >
            <div
              className="subscription label"
            >
              Subscription
               
              (1 of {0})
              <Tooltip
                direction="bottom"
                iconDescription="tooltip"
                iconName="info"
                iconTitle=""
                menuOffset={[Function]}
                open={false}
                showIcon={true}
                triggerText=""
              >
                <span
                  className="showPagesTooltip"
                >
                  Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                </span>
              </Tooltip>
            </div>
            <div
              className="channelsCombo"
            >
              <DropdownV2
                ariaLabel="All subscriptions"
                disabled={false}
                id="comboChannel"
                inline={true}
                itemToElement={null}
                itemToString={[Function]}
                items={
                  Array [
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                        Object {
                          "beg": "elasticsearch-es-replicationcontroller",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                          "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                        },
                        Object {
                          "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                          "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                        },
                      ],
                    },
                  ]
                }
                label="All subscriptions"
                light={false}
                onChange={[Function]}
                selectedItem={Object {}}
                type="default"
              />
            </div>
          </div>,
          <div
            className="pagination"
          >
            <div
              className="resourcePaging label"
            >
              Resource nodes
              <div
                className="show-subscription-pages-icon"
              >
                <Tooltip
                  direction="bottom"
                  iconDescription="tooltip"
                  iconName="info"
                  iconTitle=""
                  menuOffset={[Function]}
                  open={false}
                  showIcon={true}
                  triggerText=""
                >
                  <span
                    className="showPagesTooltip"
                  >
                    Use the navigation to view the resources that are deployed by the selected subscription.
                  </span>
                </Tooltip>
              </div>
            </div>
            <div
              className="mainPagination"
            >
              <span
                className="label pageLabel labelLink"
                id="p1"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &lt;&lt;
              </span>
              <span
                className="label pageLabel labelLink"
                id="p2"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &lt;
              </span>
              <input
                aria-label="Current page"
                className="label pageInput"
                id="valuePage"
                max="{channelsLength}"
                min="1"
                onChange={[Function]}
                onKeyPress={[Function]}
                tabIndex="0"
                type="number"
                value={2}
              />
              <span
                className="label pageLabel"
              >
                of {0}
              </span>
              <span
                className="label pageLabel labelLink"
                id="p3"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &gt;
              </span>
              <span
                className="label pageLabel labelLink"
                id="p4"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="button"
                tabIndex="0"
              >
                &gt;&gt;
              </span>
            </div>
          </div>,
        ],
        "className": "channel-controls-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="subscription label"
              >
                Subscription
                 
                (1 of {0})
                <Tooltip
                  direction="bottom"
                  iconDescription="tooltip"
                  iconName="info"
                  iconTitle=""
                  menuOffset={[Function]}
                  open={false}
                  showIcon={true}
                  triggerText=""
                >
                  <span
                    className="showPagesTooltip"
                  >
                    Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                  </span>
                </Tooltip>
              </div>,
              <div
                className="channelsCombo"
              >
                <DropdownV2
                  ariaLabel="All subscriptions"
                  disabled={false}
                  id="comboChannel"
                  inline={true}
                  itemToElement={null}
                  itemToString={[Function]}
                  items={
                    Array [
                      Object {
                        "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                        "hasSubchannels": true,
                        "label": "guestbook-app",
                        "splitChn": Array [
                          "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                          "default",
                          "guestbook-app",
                          "gbapp-ch",
                          "guestbook-app-latest",
                        ],
                        "subchannels": Array [
                          Object {
                            "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                            "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                          },
                          Object {
                            "beg": "elasticsearch-es-replicationcontroller",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                            "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                          },
                          Object {
                            "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                            "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                          },
                        ],
                      },
                    ]
                  }
                  label="All subscriptions"
                  light={false}
                  onChange={[Function]}
                  selectedItem={Object {}}
                  type="default"
                />
              </div>,
            ],
            "className": "channels",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Subscription",
                  " ",
                  "(1 of {0})",
                  <Tooltip
                    direction="bottom"
                    iconDescription="tooltip"
                    iconName="info"
                    iconTitle=""
                    menuOffset={[Function]}
                    open={false}
                    showIcon={true}
                    triggerText=""
                  >
                    <span
                      className="showPagesTooltip"
                    >
                      Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                    </span>
                  </Tooltip>,
                ],
                "className": "subscription label",
              },
              "ref": null,
              "rendered": Array [
                "Subscription",
                " ",
                "(1 of {0})",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <span
                      className="showPagesTooltip"
                    >
                      Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.
                    </span>,
                    "direction": "bottom",
                    "iconDescription": "tooltip",
                    "iconName": "info",
                    "iconTitle": "",
                    "menuOffset": [Function],
                    "open": false,
                    "showIcon": true,
                    "triggerText": "",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                      "className": "showPagesTooltip",
                    },
                    "ref": null,
                    "rendered": "Displays the list of subscriptions created by this application. Click the drop-down menu to select a subscription and view its deployed resources in the topology.",
                    "type": "span",
                  },
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <DropdownV2
                  ariaLabel="All subscriptions"
                  disabled={false}
                  id="comboChannel"
                  inline={true}
                  itemToElement={null}
                  itemToString={[Function]}
                  items={
                    Array [
                      Object {
                        "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                        "hasSubchannels": true,
                        "label": "guestbook-app",
                        "splitChn": Array [
                          "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                          "default",
                          "guestbook-app",
                          "gbapp-ch",
                          "guestbook-app-latest",
                        ],
                        "subchannels": Array [
                          Object {
                            "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                            "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                          },
                          Object {
                            "beg": "elasticsearch-es-replicationcontroller",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                            "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                          },
                          Object {
                            "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                            "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                            "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                          },
                        ],
                      },
                    ]
                  }
                  label="All subscriptions"
                  light={false}
                  onChange={[Function]}
                  selectedItem={Object {}}
                  type="default"
                />,
                "className": "channelsCombo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "ariaLabel": "All subscriptions",
                  "disabled": false,
                  "id": "comboChannel",
                  "inline": true,
                  "itemToElement": null,
                  "itemToString": [Function],
                  "items": Array [
                    Object {
                      "chn": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                      "hasSubchannels": true,
                      "label": "guestbook-app",
                      "splitChn": Array [
                        "default/guestbook-app//gbapp-ch/guestbook-app-latest",
                        "default",
                        "guestbook-app",
                        "gbapp-ch",
                        "guestbook-app-latest",
                      ],
                      "subchannels": Array [
                        Object {
                          "beg": "mysql-wordpress-pd-wordpress-mysql-service",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
                          "end": "staging-elasticsearch-elasticsearch-serviceaccount",
                        },
                        Object {
                          "beg": "elasticsearch-es-replicationcontroller",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                          "end": "persistent-volume-provisioning-glusterfs-heketi-secret-secret",
                        },
                        Object {
                          "beg": "persistent-volume-provisioning-glusterfs-slow-storageclass",
                          "chnl": "default/guestbook-app//gbapp-ch/guestbook-app-latest///persistent-volume-provisioning-glusterfs-slow-storageclass///spark-spark-gluster-spark-master-controller-replicationcontroller",
                          "end": "spark-spark-gluster-spark-master-controller-replicationcontroller",
                        },
                      ],
                    },
                  ],
                  "label": "All subscriptions",
                  "light": false,
                  "onChange": [Function],
                  "selectedItem": Object {},
                  "type": "default",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="resourcePaging label"
              >
                Resource nodes
                <div
                  className="show-subscription-pages-icon"
                >
                  <Tooltip
                    direction="bottom"
                    iconDescription="tooltip"
                    iconName="info"
                    iconTitle=""
                    menuOffset={[Function]}
                    open={false}
                    showIcon={true}
                    triggerText=""
                  >
                    <span
                      className="showPagesTooltip"
                    >
                      Use the navigation to view the resources that are deployed by the selected subscription.
                    </span>
                  </Tooltip>
                </div>
              </div>,
              <div
                className="mainPagination"
              >
                <span
                  className="label pageLabel labelLink"
                  id="p1"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &lt;&lt;
                </span>
                <span
                  className="label pageLabel labelLink"
                  id="p2"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &lt;
                </span>
                <input
                  aria-label="Current page"
                  className="label pageInput"
                  id="valuePage"
                  max="{channelsLength}"
                  min="1"
                  onChange={[Function]}
                  onKeyPress={[Function]}
                  tabIndex="0"
                  type="number"
                  value={2}
                />
                <span
                  className="label pageLabel"
                >
                  of {0}
                </span>
                <span
                  className="label pageLabel labelLink"
                  id="p3"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &gt;
                </span>
                <span
                  className="label pageLabel labelLink"
                  id="p4"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  &gt;&gt;
                </span>
              </div>,
            ],
            "className": "pagination",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Resource nodes",
                  <div
                    className="show-subscription-pages-icon"
                  >
                    <Tooltip
                      direction="bottom"
                      iconDescription="tooltip"
                      iconName="info"
                      iconTitle=""
                      menuOffset={[Function]}
                      open={false}
                      showIcon={true}
                      triggerText=""
                    >
                      <span
                        className="showPagesTooltip"
                      >
                        Use the navigation to view the resources that are deployed by the selected subscription.
                      </span>
                    </Tooltip>
                  </div>,
                ],
                "className": "resourcePaging label",
              },
              "ref": null,
              "rendered": Array [
                "Resource nodes",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Tooltip
                      direction="bottom"
                      iconDescription="tooltip"
                      iconName="info"
                      iconTitle=""
                      menuOffset={[Function]}
                      open={false}
                      showIcon={true}
                      triggerText=""
                    >
                      <span
                        className="showPagesTooltip"
                      >
                        Use the navigation to view the resources that are deployed by the selected subscription.
                      </span>
                    </Tooltip>,
                    "className": "show-subscription-pages-icon",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <span
                        className="showPagesTooltip"
                      >
                        Use the navigation to view the resources that are deployed by the selected subscription.
                      </span>,
                      "direction": "bottom",
                      "iconDescription": "tooltip",
                      "iconName": "info",
                      "iconTitle": "",
                      "menuOffset": [Function],
                      "open": false,
                      "showIcon": true,
                      "triggerText": "",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Use the navigation to view the resources that are deployed by the selected subscription.",
                        "className": "showPagesTooltip",
                      },
                      "ref": null,
                      "rendered": "Use the navigation to view the resources that are deployed by the selected subscription.",
                      "type": "span",
                    },
                    "type": [Function],
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="label pageLabel labelLink"
                    id="p1"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    &lt;&lt;
                  </span>,
                  <span
                    className="label pageLabel labelLink"
                    id="p2"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    &lt;
                  </span>,
                  <input
                    aria-label="Current page"
                    className="label pageInput"
                    id="valuePage"
                    max="{channelsLength}"
                    min="1"
                    onChange={[Function]}
                    onKeyPress={[Function]}
                    tabIndex="0"
                    type="number"
                    value={2}
                  />,
                  <span
                    className="label pageLabel"
                  >
                    of {0}
                  </span>,
                  <span
                    className="label pageLabel labelLink"
                    id="p3"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    &gt;
                  </span>,
                  <span
                    className="label pageLabel labelLink"
                    id="p4"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex="0"
                  >
                    &gt;&gt;
                  </span>,
                ],
                "className": "mainPagination",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "<<",
                    "className": "label pageLabel labelLink",
                    "id": "p1",
                    "onClick": [Function],
                    "onKeyPress": [Function],
                    "role": "button",
                    "tabIndex": "0",
                  },
                  "ref": null,
                  "rendered": "<<",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "<",
                    "className": "label pageLabel labelLink",
                    "id": "p2",
                    "onClick": [Function],
                    "onKeyPress": [Function],
                    "role": "button",
                    "tabIndex": "0",
                  },
                  "ref": null,
                  "rendered": "<",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "aria-label": "Current page",
                    "className": "label pageInput",
                    "id": "valuePage",
                    "max": "{channelsLength}",
                    "min": "1",
                    "onChange": [Function],
                    "onKeyPress": [Function],
                    "tabIndex": "0",
                    "type": "number",
                    "value": 2,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "of {0}",
                    "className": "label pageLabel",
                  },
                  "ref": null,
                  "rendered": "of {0}",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": ">",
                    "className": "label pageLabel labelLink",
                    "id": "p3",
                    "onClick": [Function],
                    "onKeyPress": [Function],
                    "role": "button",
                    "tabIndex": "0",
                  },
                  "ref": null,
                  "rendered": ">",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": ">>",
                    "className": "label pageLabel labelLink",
                    "id": "p4",
                    "onClick": [Function],
                    "onKeyPress": [Function],
                    "role": "button",
                    "tabIndex": "0",
                  },
                  "ref": null,
                  "rendered": ">>",
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
